fixed vertical scrollbar

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -204,4 +204,5 @@ body, * {
 
 ::-webkit-scrollbar {
     width: 5px;
+    height: 5px;
 }
